--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,11 @@ body, html {
     padding: 0;
     height: 100%;
     overflow: hidden;
+    font-family: 'Segoe UI', sans-serif;
 }
 
 nav {
-    background-color: #333;
+    background-color: none;
     position: fixed;
     width: 100%;
     z-index: 1000;
@@ -31,7 +32,13 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #555;
+    text-shadow: 0 0 5px rgba(0, 247, 255, 0.7);
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .background {
@@ -48,6 +55,12 @@ nav ul li a:hover {
     justify-content: space-between;
 }
 
+.images-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
 .image1, .image2 {
     width: 28%;
     height: 100%;
@@ -59,7 +72,7 @@ nav ul li a:hover {
 }
 
 .image2 {
-    background-image: url('./assets/bush_right.png'); /* Move this line here */
+    background-image: url('./assets/bush_right.png');
 }
 
 .image1.transformed {
@@ -68,6 +81,27 @@ nav ul li a:hover {
 
 .image2.transformed {
     transform: translateX(130px) scale(1.2);
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    margin: 25%;
+}
+
+.gradient-button {
+    background: linear-gradient(to right, rgb(255, 179, 0), rgb(255, 204, 0));
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin: 0 10px;
+    cursor: pointer;
+    font-size: 26px;
+}
+
+.gradient-button:hover {
+    box-shadow: 0 0 15px rgb(255, 187, 1);
 }
 
 .overlay {
