--- a/new_styles.css
+++ b/new_styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', sans-serif;
+    scroll-behavior: smooth;
 }
 
 header {
@@ -35,7 +36,7 @@ header nav a:hover {
     text-shadow: 0 0 5px rgba(0, 247, 255, 1);
 }
 
-header nav:hover > a:not(:hover) {
+header nav:hover > a:not(:hover):not(.active) {
     text-shadow: none;
 }
 
@@ -152,7 +153,7 @@ header nav:hover > a:not(:hover) {
     transition: transform 0.2s ease, filter 0.2s ease;
 }
 
-.about {
+.how-it-works {
     padding: 150px;
     background: linear-gradient(to top, #1e1e1e 40%, #4c4a4b);;
     color: white;
@@ -161,6 +162,10 @@ header nav:hover > a:not(:hover) {
     z-index: 100;
 }
 
-.about h1 {
+.how-it-works h1 {
+    text-align: center;
+    font-family: "Stick No Bills", sans-serif;
+    font-weight: bold;
+    font-style: normal;
     font-size: 40px;
 }
