--- a/new_styles.css
+++ b/new_styles.css
@@ -158,7 +158,6 @@ header nav:hover > a:not(:hover):not(.active) {
     background: linear-gradient(to top, #1e1e1e 40%, #4c4a4b);;
     color: white;
     position: relative;
-    z-index: 10;
 }
 
 .how-it-works h1 {
@@ -213,4 +212,27 @@ header nav:hover > a:not(:hover):not(.active) {
 .how-it-works .description {
     text-align: center;
     width: 90%;
+}
+
+.s1d623h8f1 {
+    text-align: center;
+    transform: rotate(-1.5deg);
+    margin: -30px 0;
+    height: 55px;
+    background-color: rgb(250, 250, 250);
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.s1d623h8f1 .black {
+    margin-right: 100px;
+}
+
+.s1d623h8f1 .white {
+    display: inline-block;
+    color: white;
+    -webkit-text-stroke: 0.7px black;
 }
