--- a/styles.css
+++ b/styles.css
@@ -1,108 +1,53 @@
-
-body, html {
+* {
     margin: 0;
     padding: 0;
-    height: 100%;
+    box-sizing: border-box;
     font-family: 'Segoe UI', sans-serif;
+    scroll-behavior: smooth;
 }
 
-nav {
-    background-color: none;
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    padding: 0 5%;
     position: fixed;
+    top: 0;
     width: 100%;
     z-index: 1000;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+header nav {
+    display: flex;
+    gap: 30px;
 }
 
-nav ul li {
-    display: inline;
-}
-
-nav ul li a {
-    display: inline-block;
-    padding: 10px 20px;
-    color: white;
+header nav a {
     text-decoration: none;
-}
-
-nav ul li a:hover {
-    text-shadow: 0 0 5px rgba(0, 247, 255, 0.7);
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-.background {
-    background-image: url('./assets/bg.png');
-    background-size: contain;
-    background-position: center;
-    position: absolute;
-    z-index: -1000;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    filter: blur(10px);
-    animation: slideDown 0.5s ease forwards;
-    display: flex;
-    justify-content: space-between;
-}
-
-.images-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.image1, .image2 {
-    width: 28vw;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    transition: transform 2s ease-out;
-    transform: translateX(0) scale(1);
-    background-image: url('./assets/bush_left.png');
-}
-
-.image2 {
-    background-image: url('./assets/bush_right.png');
-}
-
-.image1.transformed {
-    transform: translateX(-130px) scale(1.2);
-}
-
-.image2.transformed {
-    transform: translateX(100px) scale(1.2);
-}
-
-.buttons-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 25%;
-}
-
-.gradient-button {
-    background: linear-gradient(to right, rgb(255, 179, 0), rgb(255, 204, 0));
+    font-size: 20px;
+    font-weight: 600;
+    transition: 0.3s;
     color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    margin: 0 10px;
-    cursor: pointer;
-    font-size: 26px;
 }
 
-.gradient-button:hover {
-    box-shadow: 0 0 15px rgb(255, 187, 1);
+header nav a.active,
+header nav a:hover {
+    text-shadow: 0 0 5px rgba(0, 247, 255, 1);
+}
+
+header nav:hover > a:not(:hover):not(.active) {
+    text-shadow: none;
+}
+
+.home {
+    display: flex;
+    justify-content: space-between;
+    height: 100vh;
+    background: linear-gradient(to top, #fff 10%, #308cb8);
+    position: relative;
+    overflow: hidden;
+    animation: slideDown 0.5s ease forwards;
 }
 
 .overlay {
@@ -113,6 +58,7 @@ nav ul li a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 .popup {
@@ -145,80 +91,157 @@ nav ul li a:hover {
     margin-top: 20px;
 }
 
-#about {
-    padding: 20px;
-    text-align: center;
-    z-index: 1000;
-    background-color: aliceblue;
+.home img {
+    pointer-events: none;
 }
 
-#about h2 {
-    margin-bottom: 15px;
-}
-
-/* Your CSS styles */
-.team-details {
+.leaf1, .leaf2 {
+    z-index: 3; 
     position: absolute;
-    top: 50%;
+    bottom: 0;
+    width: 25%;
+}
+
+.bush1, .bush2 {z-index: 2; top: 0;}
+
+.leaf1 {
+    left: 0;
+}
+
+.leaf2 {
+    right: 0;
+}
+
+.home .title {
+    position: absolute;
+    top: 27%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.95);
-    padding: 20px;
-    border-radius: 10px;
-    opacity: 0; /* Initially hidden */
-    animation: fadeIn 0.5s ease forwards; /* Animation for fade in */
-    z-index: 999; /* Ensure it's on top of other content */
+    z-index: 0;
+
 }
 
-.team-details h1 {
-    margin-bottom: 20px;
+.home .ground {
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
 }
 
-.team-member {
+.home .road {
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+}
+
+.home .upload {
+    position: absolute;
+    z-index: 2;
+    bottom: 2%;
+    left: 25%;
+}
+
+.home .stream {
+    position: absolute;
+    z-index: 2;
+    bottom: 30%;
+    right: 35%;
+    width: 170px;
+}
+
+.upload, .stream {
+    cursor: pointer;
+    transition: transform 0.2s ease, filter 0.2s ease;
+}
+
+.how-to-use {
+    padding: 10vh 0;
+    background: linear-gradient(to top, #27252f 40%, #4c4a4b);;
+    color: white;
+    position: relative;
+}
+
+.how-to-use h1 {
+    text-align: center;
+    font-family: "Stick No Bills", sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 40px;
+}
+
+.htu-container {
+    padding: 4vh 15vw;
     display: flex;
+    justify-content: center;
+    gap: 5vw;
+}
+
+.how-to-use img {
+    width: 250px    ;
+}
+
+.how-to-use .room-one,
+.how-to-use .room-two,
+.how-to-use .room-three {
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
     align-items: center;
-    margin-bottom: 20px;
+    max-width: 275px;
 }
 
-.team-member img {
-    width: 100px; /* Adjust as needed */
-    height: 100px;
-    border-radius: 50%; /* Rounded profile picture */
-    margin-right: 20px;
-}
-
-.team-member-details h2 {
-    margin: 0 0 5px;
+.how-to-use .speech-bubble {
+    margin: 2rem 0 1rem 0;
+    border-radius: 20px;
+    padding: 5px 15px;
+    font-family: "Stick No Bills", sans-serif;
+    font-weight: bold;
     font-size: 20px;
 }
 
-.team-member-details p {
-    margin: 0;
-    font-size: 16px;
-    color: #666;
+.how-to-use .stream {
+    border: 5px solid rgb(159, 202, 89);
 }
 
-/* CSS animation for fade in */
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+.how-to-use .process {
+    border: 5px solid rgb(244, 111, 81);
 }
 
-/* CSS for close button */
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 24px;
+.how-to-use .observe {
+    border: 5px solid rgb(30, 156, 237);
 }
 
-#video {
-    position: fixed;
-    inset: 1rem;
-    z-index: 100;
+.how-to-use .description {
+    text-align: center;
+    width: 90%;
+}
+
+.s1d623h8f1 {
+    text-align: center;
+    transform: rotate(-1.5deg);
+    margin: -30px 0;
+    height: 55px;
+    background-color: rgb(250, 250, 250);
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.s1d623h8f1 .black {
+    margin-right: 100px;
+}
+
+.s1d623h8f1 .white {
+    display: inline-block;
+    color: white;
+    -webkit-text-stroke: 0.7px black;
+}
+
+.how-it-works {
+    padding: 10vh 0;
+    background: linear-gradient(to top, #1a1122 40%, #111422);;
+    color: white;
+    position: relative;
+    z-index: -1;
 }
