--- a/styles.css
+++ b/styles.css
@@ -359,3 +359,43 @@ input:checked + label .description {
     padding: 10vh 0;
     background-color: #B9929F;
 }
+
+.spinner {
+    width: 56px;
+    height: 56px;
+    display: grid;
+    border: 4px solid #0000;
+    border-radius: 50%;
+    border-right-color: #ffc229;
+    animation: spinner-a4dj62 1s infinite linear;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2000;
+}
+   
+.spinner::before,
+.spinner::after {
+    content: "";
+    grid-area: 1/1;
+    margin: 2px;
+    border: inherit;
+    border-radius: 50%;
+    animation: spinner-a4dj62 2s infinite;
+}
+   
+.spinner::after {
+    margin: 8px;
+    animation-duration: 3s;
+}
+   
+@keyframes spinner-a4dj62 {
+    0% { transform: rotate(0turn); }
+    100% { transform: rotate(1turn); }
+}
+
+.blur {
+    filter: blur(5px);
+    pointer-events: none;
+}
